fix some scrolling/scrollbar issues

--- a/src/dozmia.css
+++ b/src/dozmia.css
@@ -4,8 +4,7 @@ html, body {
   height: 100%;
   max-width: 100%;
   max-height: 100%;
-  overflow-x: hidden;
-  overflow-y: scroll;
+  overflow: hidden;
 }
 
 body {
@@ -16,8 +15,10 @@ body {
   line-height: 30px;
 }
 
-body.dozmia-cta-wrapper {
+.dozmia-cta-min-height {
   min-height: 500px;
+  max-height: 100%;
+  position: relative;
 }
 
 template {
